Fix minor code issue.